<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Manobo Dictionary</string>

    <string name="entry_notes">Notes</string>
    <string name="entry_definition">Definition</string>
    <string name="search_label">Search dictionary</string>
    <string name="menu_home">Home</string>
    <string name="menu_bookmarked">Bookmarked Entries</string>
    <string name="menu_about">About the App</string>
    <string name="menu_sil">SIL Philippines</string>
    <string name="menu_sos">Save Our Schools Network</string>
    <string name="splash_setup">Setting up the dictionary…</string>
    <string name="splash_progress" tools:ignore="PluralsCandidate">Added %1$d / %2$d entries.</string>
    <string name="image_background">Background image</string>
    <string name="image_logo">Logo</string>
    <string name="entry_list_no_data">No entries for this letter can be found.</string>
    <string name="entry_menu_bookmark">Bookmark</string>
    <string name="entry_bookmark_saved">This entry has been bookmarked.</string>
    <string name="entry_bookmark_removed">This entry has been removed from your bookmarks.</string>
    <string name="bookmarked_no_data">No bookmarked entries can be found.</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas nec ante eget ullamcorper. Praesent a tellus tellus. Donec in varius leo, lacinia ultricies velit. Integer convallis lorem in magna viverra iaculis. Donec scelerisque orci enim, at laoreet est euismod eget. Sed fringilla semper nunc ut malesuada. In ac erat metus. Nam sodales, enim id efficitur suscipit, neque lectus dapibus arcu, at imperdiet lectus elit ut purus. Aliquam nec risus id purus semper lobortis quis ac elit. Sed lobortis id lorem et vulputate. Etiam lacus ante, dictum eget pharetra in, tincidunt nec augue. Duis id justo semper, porttitor risus nec, dapibus nunc. Nam eget odio non arcu tristique gravida. Nam aliquam tellus erat, et maximus ipsum elementum ut. Maecenas ac ipsum id dolor varius tempus. Nullam ornare ultrices vehicula
    </string>
    <string name="text_about_1">This Manobo dictionary app serves as a reference to the Manobos in Caraga region to help preserve, strengthen, and empower the use of the language.</string>
    <string name="text_about_2">The use of the Manobo language is being threatened by several factors such as discrimination against the Lumad group, displacement, militarization and land grabbing. With this, we seek to preserve a part of their culture while also fighting for the rights of the Lumad people.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_about_3">The app uses data retrieved from SIL Philippines’ website and is jointly developed by Chad Booc, a volunteer teacher for Alternative Learning Center for Agricultural and Livelihood Development (ALCADEV), a part of the Save Our Schools (SOS) Network, and Ricardo De Leon, a software engineer and volunteer for Computer Professionals’ Union (CPU).</string>
    <string name="text_sos_1">Save Our Schools Network is a network of child-focused NGOs, church-based groups, and other stakeholders advocating for children\'s right to education.</string>
    <string name="text_sos_2">Lumad schools are built by the community themselves with the aim of educating the indigenous youth about their human rights and how to defend themselves and their ancestral lands.
        This is the exact reason why these schools are constantly being attacked by the Armed Forces of the Philippines. They do not want the Lumad to get educated since this would hinder the corporate interests to grab their ancestral lands.</string>
    <string name="text_sos_3">With this, SOS Network stands with the Lumad in their fight for the right to education and for their ancestral lands. The network calls to end the military attacks against Lumad schools and communities.</string>
    <string name="text_sos_4">#SaveLumadSchools\n#EndMilitarization\n#StopTheAttacks</string>
    <string name="menu_links">External Links</string>
    <string name="link_sil">The Summer Institute of Linguistics, Philippines (SIL Philippines)</string>
    <string name="link_alcadev">Alternative Learning Center for Agricultural and Livelihood Development (ALCADEV)</string>
    <string name="link_sos">Save Our Schools Network (SOS)</string>
    <string name="link_cpu">Computer Professionals\' Union (CPU)</string>
    <string name="splash_permission">Used by permission, © SIL International,\nManobo Dictionary (2000)</string>
    <string name="splash_permission_compact">Used by permission, © SIL International, Manobo Dictionary (2000)</string>
</resources>
